--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.kriss.unbrable.nz.example.kriss.unbrable.CalculatorActivity">
+    tools:context="nz.ac.auckland.unbrable.CalculatorActivity">
 
     <TextView
         android:layout_width="wrap_content"
