--- a/app/src/main/res/layout/activity_edit_diary_entry.xml
+++ b/app/src/main/res/layout/activity_edit_diary_entry.xml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_edit_diary_entry"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="nz.ac.auckland.unbrable.EditDiaryEntry">
+    android:padding="16dp">
 
     <TextView
         android:text="@string/new_entry"
@@ -21,11 +16,17 @@
         android:layout_width="@dimen/image_size"
         app:srcCompat="@android:drawable/ic_menu_camera"
         android:id="@+id/imageButton"
-        android:layout_marginTop="39dp"
+        android:layout_marginTop="30dp"
         android:contentDescription="@string/choose_image"
         android:layout_height="@dimen/image_size"
-        android:layout_below="@+id/textView3"
-        android:layout_centerHorizontal="true" />
+        android:layout_gravity="center"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/image_view"
+        android:visibility="gone"
+        android:layout_gravity="center"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -35,9 +36,6 @@
         android:id="@+id/editText"
         android:hint="@string/hint"
         android:selectAllOnFocus="false"
-        android:layout_below="@+id/imageButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="23dp" />
+        android:layout_marginTop="20dp" />
 
-</RelativeLayout>
+</LinearLayout>
