--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_calculator"
+    android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -34,7 +34,7 @@
         android:layout_alignEnd="@+id/textView1" />
 
     <EditText
-        android:id = "@+id/editText"
+        android:id = "@+id/pwText"
         android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
         android:inputType = "textPassword"
@@ -48,16 +48,16 @@
         android:layout_alignStart="@+id/textView1" />
 
     <Button
-        android:id = "@+id/button"
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:backgroundTint="#00cc99"
-        android:onClick = "login"
-        android:text = "Unlock"
-        android:textColor = "#ffffff"
-        android:stateListAnimator="@null"
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/pwText"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="17dp"
-        android:layout_below="@+id/editText"
-        android:layout_centerHorizontal="true" />
+        android:backgroundTint="#00cc99"
+        android:onClick="checkLogin"
+        android:stateListAnimator="@null"
+        android:text="Unlock"
+        android:textColor="#ffffff" />
 
 </RelativeLayout>
