--- a/app/src/main/res/layout/activity_edit_diary_entry.xml
+++ b/app/src/main/res/layout/activity_edit_diary_entry.xml
@@ -18,15 +18,14 @@
         android:id="@+id/imageButton"
         android:layout_marginTop="30dp"
         android:contentDescription="@string/choose_image"
-        android:layout_height="@dimen/image_size"
-        android:layout_gravity="center"/>
+        android:layout_height="@dimen/image_size"/>
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="320dp"
+        android:scaleType="fitXY"
         android:id="@+id/image_view"
-        android:visibility="gone"
-        android:layout_gravity="center"/>
+        android:visibility="gone"/>
 
     <EditText
         android:layout_width="match_parent"
