--- a/app/src/main/res/layout/activity_diary_entry.xml
+++ b/app/src/main/res/layout/activity_diary_entry.xml
@@ -23,8 +23,8 @@
             android:id="@+id/textView2" />
 
         <ImageView
-            android:layout_width="@dimen/image_size"
-            android:layout_height="@dimen/image_size"
+            android:layout_width="200dp"
+            android:layout_height="320dp"
             app:srcCompat="@mipmap/ic_launcher"
             android:id="@+id/imageView"
             android:contentDescription="@string/image" />
