--- a/app/src/main/res/layout/activity_edit_diary_entry.xml
+++ b/app/src/main/res/layout/activity_edit_diary_entry.xml
@@ -21,8 +21,8 @@
         android:layout_height="@dimen/image_size"/>
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="320dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:scaleType="fitXY"
         android:id="@+id/image_view"
         android:visibility="gone"/>
