--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -13,6 +13,13 @@
         android:footerDividersEnabled="false"
         android:headerDividersEnabled="false" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:visibility="gone"
+        android:id="@+id/empty_text_view"
+        android:text="@string/empty_list_string"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/addButton"
